--- a/Backtester-Vince.ipynb
+++ b/Backtester-Vince.ipynb
@@ -2,58 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /usr/local/python/3.12.1/lib/python3.12/site-packages (from -r ./requirements.txt (line 1)) (2.4.1)\n",
-      "Requirement already satisfied: pandas in /usr/local/python/3.12.1/lib/python3.12/site-packages (from -r ./requirements.txt (line 2)) (3.0.0)\n",
-      "Requirement already satisfied: matplotlib in /usr/local/python/3.12.1/lib/python3.12/site-packages (from -r ./requirements.txt (line 3)) (3.10.8)\n",
-      "Requirement already satisfied: openpyxl in /usr/local/python/3.12.1/lib/python3.12/site-packages (from -r ./requirements.txt (line 4)) (3.1.5)\n",
-      "Requirement already satisfied: ipywidgets in /usr/local/python/3.12.1/lib/python3.12/site-packages (from -r ./requirements.txt (line 5)) (8.1.8)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/codespace/.local/lib/python3.12/site-packages (from pandas->-r ./requirements.txt (line 2)) (2.9.0.post0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from matplotlib->-r ./requirements.txt (line 3)) (1.3.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from matplotlib->-r ./requirements.txt (line 3)) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from matplotlib->-r ./requirements.txt (line 3)) (4.61.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from matplotlib->-r ./requirements.txt (line 3)) (1.4.9)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/codespace/.local/lib/python3.12/site-packages (from matplotlib->-r ./requirements.txt (line 3)) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from matplotlib->-r ./requirements.txt (line 3)) (12.1.0)\n",
-      "Requirement already satisfied: pyparsing>=3 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from matplotlib->-r ./requirements.txt (line 3)) (3.3.2)\n",
-      "Requirement already satisfied: et-xmlfile in /usr/local/python/3.12.1/lib/python3.12/site-packages (from openpyxl->-r ./requirements.txt (line 4)) (2.0.0)\n",
-      "Requirement already satisfied: comm>=0.1.3 in /home/codespace/.local/lib/python3.12/site-packages (from ipywidgets->-r ./requirements.txt (line 5)) (0.2.3)\n",
-      "Requirement already satisfied: ipython>=6.1.0 in /home/codespace/.local/lib/python3.12/site-packages (from ipywidgets->-r ./requirements.txt (line 5)) (9.7.0)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in /home/codespace/.local/lib/python3.12/site-packages (from ipywidgets->-r ./requirements.txt (line 5)) (5.14.3)\n",
-      "Requirement already satisfied: widgetsnbextension~=4.0.14 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from ipywidgets->-r ./requirements.txt (line 5)) (4.0.15)\n",
-      "Requirement already satisfied: jupyterlab_widgets~=3.0.15 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from ipywidgets->-r ./requirements.txt (line 5)) (3.0.16)\n",
-      "Requirement already satisfied: decorator>=4.3.2 in /home/codespace/.local/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (5.2.1)\n",
-      "Requirement already satisfied: ipython-pygments-lexers>=1.0.0 in /home/codespace/.local/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (1.1.1)\n",
-      "Requirement already satisfied: jedi>=0.18.1 in /home/codespace/.local/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (0.19.2)\n",
-      "Requirement already satisfied: matplotlib-inline>=0.1.5 in /home/codespace/.local/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (0.2.1)\n",
-      "Requirement already satisfied: pexpect>4.3 in /home/codespace/.local/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (4.9.0)\n",
-      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in /home/codespace/.local/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (3.0.52)\n",
-      "Requirement already satisfied: pygments>=2.11.0 in /home/codespace/.local/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (2.19.2)\n",
-      "Requirement already satisfied: stack_data>=0.6.0 in /home/codespace/.local/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (0.6.3)\n",
-      "Requirement already satisfied: wcwidth in /home/codespace/.local/lib/python3.12/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (0.2.14)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /home/codespace/.local/lib/python3.12/site-packages (from jedi>=0.18.1->ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (0.8.5)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /home/codespace/.local/lib/python3.12/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (0.7.0)\n",
-      "Requirement already satisfied: six>=1.5 in /home/codespace/.local/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->-r ./requirements.txt (line 2)) (1.17.0)\n",
-      "Requirement already satisfied: executing>=1.2.0 in /home/codespace/.local/lib/python3.12/site-packages (from stack_data>=0.6.0->ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (2.2.1)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in /home/codespace/.local/lib/python3.12/site-packages (from stack_data>=0.6.0->ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (3.0.1)\n",
-      "Requirement already satisfied: pure-eval in /home/codespace/.local/lib/python3.12/site-packages (from stack_data>=0.6.0->ipython>=6.1.0->ipywidgets->-r ./requirements.txt (line 5)) (0.2.3)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m26.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#vincemauro - Da lanciare sempre per verificare che siano soddisfatti i requisiti tecnici\n",
+    "%%capture\n",
     "\n",
-    "%pip install -r ./requirements.txt\n",
+    "# vincemauro - Da lanciare sempre per verificare che siano soddisfatti i requisiti tecnici\n",
+    "# capture disabilita l'output di pip. Rimuoverlo per leggere eventuali errori.\n",
+    "\n",
+    "%pip install -p -r ./requirements.txt\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -65,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -100,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -198,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c11f1dd06a4a99961f0ccc4d96294f",
+       "model_id": "78f2de6046e747ed877f8563b10f5a42",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7428cd792732418caaaca3a1053c475d",
+       "model_id": "4dfc861b27694db9b213757edb4562c3",
        "version_major": 2,
        "version_minor": 0
       },
