--- a/Backtester.ipynb
+++ b/Backtester.ipynb
@@ -2,28 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
+    "#%%capture\n",
     "\n",
     "# vincemauro - Da lanciare sempre per verificare che siano soddisfatti i requisiti tecnici\n",
     "# capture disabilita l'output di pip. Rimuoverlo per leggere eventuali errori.\n",
     "\n",
-    "%pip install -p -r ./requirements.txt\n",
+    "#%pip install -r ./requirements.txt\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78f2de6046e747ed877f8563b10f5a42",
+       "model_id": "5b74183209f64f22912bebfbd3c58cb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dfc861b27694db9b213757edb4562c3",
+       "model_id": "1eb15616f4424ca9a1f667fa6c068b00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,9 +202,9 @@
     "ticker_SHY  = widgets.FloatSlider(value=0, min=0, max=1.0, step=0.01, disabled=False, continuous_update=False, orientation='horizontal', readout=True, readout_format='.2f', description='SHY:')\n",
     "ticker_IEF  = widgets.FloatSlider(value=0, min=0, max=1.0, step=0.01, disabled=False, continuous_update=False, orientation='horizontal', readout=True, readout_format='.2f', description='IEF:')\n",
     "ticker_TLT  = widgets.FloatSlider(value=0, min=0, max=1.0, step=0.01, disabled=False, continuous_update=False, orientation='horizontal', readout=True, readout_format='.2f', description='TLT:')\n",
-    "ticker_ZROZ = widgets.FloatSlider(value=0.3, min=0, max=1.0, step=0.01, disabled=False, continuous_update=False, orientation='horizontal', readout=True, readout_format='.2f', description='ZROZ:')\n",
+    "ticker_ZROZ = widgets.FloatSlider(value=0.25, min=0, max=1.0, step=0.01, disabled=False, continuous_update=False, orientation='horizontal', readout=True, readout_format='.2f', description='ZROZ:')\n",
     "ticker_KMLM = widgets.FloatSlider(value=0, min=0, max=1.0, step=0.01, disabled=False, continuous_update=False, orientation='horizontal', readout=True, readout_format='.2f', description='KMLM:')\n",
-    "ticker_DBMF = widgets.FloatSlider(value=0, min=0, max=1.0, step=0.01, disabled=False, continuous_update=False, orientation='horizontal', readout=True, readout_format='.2f', description='DBMF:')\n",
+    "ticker_DBMF = widgets.FloatSlider(value=0.05, min=0, max=1.0, step=0.01, disabled=False, continuous_update=False, orientation='horizontal', readout=True, readout_format='.2f', description='DBMF:')\n",
     "\n",
     "capitale_input = widgets.IntSlider(value=10000, min=1000, max=100000, step=1000, description='Capitale:')\n",
     "\n",
