copied tax calculation from Tactical allocation

--- a/Backtester.ipynb
+++ b/Backtester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -118,9 +118,6 @@
     "        ptf.update_AssetValue_weight(StockPrice)\n",
     "        \n",
     "        if ptf.check_rebalance():\n",
-    "            #print(i)\n",
-    "            #print(f\"check_rebalance {ptf.check_rebalance()}\")\n",
-    "            #print(f\"StockPrice\\n {StockPrice}\")\n",
     "            ptf.update_notional_tax_transaccost(StockPrice)\n",
     "\n",
     "        ptf.update_Return(StockPrice)    \n",
@@ -142,7 +139,7 @@
     "    print(f\"Anni in simulazione   {round(((max(ptf.date) - min(ptf.date)).days / 365.25), 2)}\")\n",
     "    print(f\"CAGR                  {(ptf.CompoundReturn**(1/(round(((max(ptf.date) - min(ptf.date)).days / 365.25), 2))) -1) * 100:.2f}%\")\n",
     "    print(f\"Total compound return {ptf.CompoundReturn * 100:.2f}%\")\n",
-    "    print(f\"Capitale iniziale {ptf.StartValue}\") #20260131 vincemauro\n",
+    "    print(f\"Capitale iniziale {initial_balance}\") #20260131 vincemauro\n",
     "    print(f\"Capitale finale {ptf.TotValue:.2f}\") #20260131 vincemauro\n",
     "    plt.semilogy(df_log.index,df_log['Compound Return'])\n",
     "    plt.xlabel('Data')\n",
@@ -156,13 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78f2de6046e747ed877f8563b10f5a42",
+       "model_id": "78a0f53fb42e468db3aef5e69799b23d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dfc861b27694db9b213757edb4562c3",
+       "model_id": "de0b7e7ef0b84c4894b7a817d51312cb",
        "version_major": 2,
        "version_minor": 0
       },
